# text2Speech

./: .gitignore  CMakeLists.txt  README.md  text2Speech.cpp  text2Speech.sln  text2Speech.vcxproj  text2Speech.vcxproj.filters  vcpkg.json
